k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: capstone-app
  labels:
    app: capstone-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: capstone-app

  template:
    metadata:
      labels:
        app: capstone-app

    spec:
      serviceAccountName: capstone-app

      containers:
        - name: capstone-app

          image: 135188036963.dkr.ecr.ap-south-1.amazonaws.com/capstone-app:PLACEHOLDER

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
