k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: capstone-app

spec:
  type: ClusterIP

  selector:
    app: capstone-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
